@@ -18,12 +18,15 @@
 }
 
 
-\section{Version 0.3-0 (2020-06-12, svn r...)}{
+\section{Version 0.3-0 (2020-06-16, svn r141)}{
   \subsection{NEW FEATURES}{
     \itemize{
       \item \code{dhyperQ()}, \code{phyperQ()}, and \code{phyperQall()} for
       \emph{exact} hypergeometric probabilities (as \dQuote{big rational}s,
       i.e., \CRANpkg{gmp} package's \code{"bigq"}).
+
+      \item Finally export (and add to svn!) \code{dbetaD94()},
+      \code{pbetaD94()}, and \code{qbetaD94()}.
     }
   }
 }
